--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,6 @@ mainClassName = 'App'
 sourceCompatibility = 1.8
 
 repositories {
-
     mavenCentral()
 }
 
@@ -23,8 +22,7 @@ dependencies {
     compile "com.sparkjava:spark-template-handlebars:2.5.5"
     compile 'org.slf4j:slf4j-simple:1.7.21'
     compile 'org.sql2o:sql2o:1.5.4'
-    compile group: 'postgresql', name: 'postgresql', version: '9.0-801.jdbc4'
-    compile group: 'org.postgresql', name: 'postgresql', version: '42.2.2'
+    implementation group: 'org.postgresql', name: 'postgresql', version: '42.2.13'
 }
 
 test {
